--- a/objetos/index.html
+++ b/objetos/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Objetos</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lemonada|Permanent+Marker|Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/css.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -35,34 +35,24 @@
     </div>
   </nav>
 
-  <main class="m-0 flex-grow-1 d-flex align-items-center justify-content-center">
-    <div id="playfield" class="col-12 d-flex justify-content-between flex-wrap">
-
-      <!-- <form class="form-inline d-flex flex-shrink border">
-        <label class="sr-only" for="trasvasar${objeto.nombre}">Preference</label>
-        <div class="input-group input-group-sm ">
-          <select class="custom-select " id="trasvasar${objeto.nombre}">
-          <option selected>Otro envase</option>
-          <option >Otro envase</option>
-          <option >Otro envase</option>
-          <option >Otro envase</option>
-          </select>
+  <main class="m-0 flex-grow-1 d-flex flex-wrap align-items-center justify-content-center">
+    <form class="form-inline bg-info-opacity d-flex col-12 align-items-center justify-content-center my-3">
+      <div class="input-group input-group-sm col-md-4 col-12">
+        <label class="sr-only" for="nombre">Nombre</label>
+        <input type="text" class="form-control input-group-sm  mt-2 mb-1 my-md-2" id="nombre" placeholder="Vaso, taza, botella, etc">
+      </div>
+      <label class="sr-only" for="volumen">Mililitros</label>
+      <div class="input-group input-group-sm col-md-3 col-12 m-1 my-md-2">
+        <input type="text" class="form-control" id="volumen" placeholder="Mililitros">
+        <div class="input-group-append">
+          <span class="input-group-text">ml</span>
         </div>
-        <label class="sr-only" for="inlineFormInputGroupUsername2">Mililitros</label>
-        <div class="input-group input-group-sm col-4">
-          <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Mililitros">
-          <div class="input-group-append">
-            <span class="input-group-text">ml</span>
-          </div>
-        </div>
-        <button onclick="" class="btn btn-sm btn-purple">Trasvasar</button>
-      </form> -->
-
-
+      </div>
+      <button class="btn btn-sm btn-purple mt-1 mb-2 my-md-2" onclick="crearEnvase(nombre.value,volumen.value)">Crear Envase</button>
+    </form>
+    <div id="playfield" class="col-12 d-flex justify-content-around flex-wrap">
 
     </div>
-
-
   </main>
 
   <footer class="bg-orange text-white text-center p-3">
@@ -97,8 +87,9 @@
   <script src="js/jquery-3.3.1.slim.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <script src="js/main.js"></script>
+  <!-- <script src="js/objetosStart.js"></script> -->
   <script src="js/objetos.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
