Fixed logo width on mobile. Added description in 'References'. Changed array.push() for array.unshift() so the new object is added at the beginning of the array

--- a/objetos/index.html
+++ b/objetos/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="author" content="Branko haberkon - brankoh@restpoint.com.ar">
   <title>Objetos</title>
   <link href="https://fonts.googleapis.com/css?family=Lemonada|Permanent+Marker|Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -15,7 +16,8 @@
 <body class="bg-light d-flex flex-column justify-content-between">
   <nav class="navbar  navbar-light bg-orange navbar-expand-md">
     <a class="navbar-brand mr-4" href="#">
-      <img id="logo" src="img/logo.png" alt="logo">
+      <img id="logo" class="d-none d-sm-inline" src="img/logo.png" alt="logo">
+      <img id="logo" class="d-sm-none" src="img/isologo.png" alt="logo">
       <h1 class="text-white d-inline ">Objetos</h1>
       <span class="d-none d-md-inline"> | Breve introducción </span>
     </a>
