Se añadió barra de búsqueda

--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
 
     <main class="m-0 flex-grow-1 d-flex flex-wrap align-items-center justify-content-center">
 
-      <component is="cards" :array="modulos.modulos"></component>
+      <input class="col-8 mt-3" type="text" name="search" placeholder="Buscar por tema" v-model="search" id="">
+
+      <div class="col-8 text-center d-flex justify-content-center" id="empty-search" v-if="filtered.length==0">
+        <p class="text-light my-auto">No se encontró ningún ejemplo del tema buscado.</p>
+      </div>
+      <component is="cards" :array="filtered"></component>
       <component is="quote" :quote="qod"></component>
 
     </main>
