--- a/microsites/objetos/index.html
+++ b/microsites/objetos/index.html
@@ -45,7 +45,7 @@
       </div>
       <label class="sr-only" for="volumen">Mililitros</label>
       <div class="input-group input-group-sm col-md-3 col-12 m-1 my-md-2">
-        <input type="text" class="form-control" id="volumen" placeholder="Mililitros">
+        <input type="number" class="form-control" id="volumen" placeholder="Mililitros">
         <div class="input-group-append">
           <span class="input-group-text">ml</span>
         </div>
