--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/css.css">
   <link rel="stylesheet" href="css/profiles.css">
+  <!-- <link rel="stylesheet" href="css/svg.css"> -->
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
@@ -42,13 +43,16 @@
     </nav>
 
     <main v-if="loaded" class="m-0 flex-grow-1 d-flex flex-wrap align-items-center justify-content-center">
-      <transition name="fade" mode="out-in">
+      <!-- <div id="wrapper"></div> -->
+
+      <transition name="fade" id="ejemplos" mode="out-in">
         <div class="col-8 text-center d-flex justify-content-center" id="empty-search" v-if="filtered.length==0">
           <p class="text-light my-auto">No se encontró ningún ejemplo del tema buscado.</p>
         </div>
       </transition>
       <component is="cards" :modulos="filtered"></component>
       <component is="quote" :quote="qod"></component>
+
     </main>
     <div v-else class="m-0 flex-grow-1 d-flex flex-column align-items-center justify-content-center">
       <img src="img/loader.svg" alt="loading...">
@@ -101,6 +105,14 @@
           <div class="modal-body text-center">
             <p>PRÓXIMAMENTE</p>
             <p>Filtros por etiquetas</p>
+            <div class="form-group">
+              <template v-for="tag in tags">
+                <label class="m-2">
+                  <input type="checkbox" name="tag" :id="tag" :value="tag"> {{tag}} 
+                </label>
+              </template>
+
+            </div>
 
           </div>
           <div class="modal-footer">
@@ -114,9 +126,11 @@
   <script src="js/jquery-3.3.1.slim.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <!-- <script src="js/vue.js"></script> -->
-  <script src="js/vue.min.js"></script>
+  <script src="js/vue.js"></script>
+  <!-- <script src="js/vue.min.js"></script> -->
   <script src="js/main.js"></script>
+  <!-- <script src="js/Card.js"></script>
+  <script src="js/svg.js"></script> -->
 </body>
 
 </html>
