--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
   <script src="js/jquery-3.3.1.slim.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <!-- <script src="js/vue.js"></script> -->
-  <script src="js/vue.min.js"></script>
+  <script src="js/vue.js"></script>
+  <!-- <script src="js/vue.min.js"></script> -->
   <script src="js/main.js"></script>
   <!-- <script src="js/Card.js"></script>
   <script src="js/svg.js"></script> -->
